--- a/word-interact-ice-cream/index.html
+++ b/word-interact-ice-cream/index.html
@@ -4,10 +4,19 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" href="style.css">
+
+  <style>
+  body {font-family: "Lobster", "Montserrat"}
+  </style>
+
 </head>
 
 <body>
-  <h1>Ice Dream Machine</h1>
+  <h1>Ice Dream</h1>
 
   <textarea cols=50 rows=7 id="input">
     Ice cream,
